--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,4 +1,4 @@
-name: Generate Snake
+name: Generate Snake Animation
 
 on:
   push:
@@ -12,16 +12,18 @@ permissions:
   contents: write
 
 jobs:
-  generate:
+  generate-snake:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Generate snake animation
+      - name: Generate snake (SVG & GIF)
         uses: Platane/snk@v3
         with:
           github_user_name: samanasgarian
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/snake.svg
+            dist/snake-dark.svg?palette=github-dark
+            dist/snake.gif
 
       - name: Publish to output branch
         uses: crazy-max/ghaction-github-pages@v3
