--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,22 +1,30 @@
-name: Generate Snake Animation
+name: GitHub Contribution Snake Generator
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * *"   # daily at 00:00 UTC
   workflow_dispatch:
 
 permissions:
   contents: write
 
+concurrency:
+  group: snake-animation
+  cancel-in-progress: true
+
 jobs:
-  generate-snake:
+  snake:
+    name: Build Contribution Snake
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
-      - name: Generate snake (SVG & GIF)
+      - name: 🧾 Checkout repository
+        uses: actions/checkout@v4
+
+      - name: 🐍 Generate snake animation assets
         uses: Platane/snk@v3
         with:
           github_user_name: samanasgarian
@@ -25,10 +33,11 @@ jobs:
             dist/snake-dark.svg?palette=github-dark
             dist/snake.gif
 
-      - name: Publish to output branch
-        uses: crazy-max/ghaction-github-pages@v3
+      - name: 🚀 Deploy assets to output branch
+        uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
           build_dir: dist
+          commit_message: "chore: update contribution snake animation"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
