--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,30 +1,22 @@
-name: GitHub Contribution Snake Generator
+name: Generate Snake Animation
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   schedule:
-    - cron: "0 0 * * *"   # daily at 00:00 UTC
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 permissions:
   contents: write
 
-concurrency:
-  group: snake-animation
-  cancel-in-progress: true
-
 jobs:
-  snake:
-    name: Build Contribution Snake
+  generate-snake:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
 
     steps:
-      - name: 🧾 Checkout repository
-        uses: actions/checkout@v4
-
-      - name: 🐍 Generate snake animation assets
+      - name: Generate snake (SVG & GIF)
         uses: Platane/snk@v3
         with:
           github_user_name: samanasgarian
@@ -33,11 +25,10 @@ jobs:
             dist/snake-dark.svg?palette=github-dark
             dist/snake.gif
 
-      - name: 🚀 Deploy assets to output branch
-        uses: crazy-max/ghaction-github-pages@v4
+      - name: Publish to output branch
+        uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
-          commit_message: "chore: update contribution snake animation"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
